# 03--litellm--openai--agent--

./: .gitignore  README.md
02_uv_litellm_chainlite/chatbot/chatbot/chatbot/: .env  .gitignore  chat_history_29287348-b8b1-451d-8333-87389c2ec711.json  chat_history_2cd774bb-aeec-463d-95a3-081dcddef3ed.json  chat_history_b5a139dc-8148-42be-816b-92da06594e44.json  main.py  pyproject.toml  requirements.txt
03_Litellm_agent_sdk/weatherbot/weatherbot/: .env  main.py  pyproject.toml  requirements.txt
03_Litellm_agent_sdk/weatherbot/weatherbot/weather_poet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
myproject/: pyproject.toml
myproject/src/myproject/: hello.py
